--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 17
+      - name: print version
+        uses: actions/checkout@v2
+        run: echo ${{ github.ref }}
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Publish package
